# MNN

./: .gitignore
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  llm_mnn_jni.cpp
app/src/main/java/com/example/simplemnnchat/: ChatSession.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
